--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,23 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles\layout.css">
+    <title>Rafael Castro - WDD131</title>
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
 
 <body>
     <header>
-        <h1 contenteditable>Header Content</h1>
+        <h1 contenteditable>
+            <p>Header Content</p>
+        </h1>
+        <nav class="navigation modern">
+            <a href="#" title="Home">Home</a>
+            <a href="#" title="Projects">Projects</a>
+            <a href="#" title="Services">Services</a>
+            <a href="#" title="Contact Us">Contact Us</a>
+        </nav>
     </header>
-    <nav class="navigation modern">
-        <a href="#" title="Home">Home</a>
-        <a href="#" title="Projects">Projects</a>
-        <a href="#" title="Services">Services</a>
-        <a href="#" title="Contact Us">Contact Us</a>
-    </nav>
-    <main contenteditable>Main Content</main>
-    <div class="right-sidebar" contenteditable>Aside Content</div>
-    <footer contenteditable>Footer Content</footer>
+    <main contenteditable>
+        <p>Main Content</p>
+    </main>
+    <div class="right-sidebar" contenteditable>
+        <p>Aside Content</p>
+    </div>
+    <footer contenteditable>
+        <p>Footer Content</p>
+    </footer>
 </body>
 
 </html>
