--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael Castro - WDD131</title>
+    <title>Rafael Castro WDD 131</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 
 <body>
     <header>
-        <h1 contenteditable>
-            <p>Header Content</p>
-        </h1>
+        <h3 contenteditable>
+            Header Content
+        </h3>
         <nav class="navigation modern">
             <a href="#" title="Home">Home</a>
             <a href="#" title="Projects">Projects</a>
