--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <h3 contenteditable>
+        <h1>
             Header Content
-        </h3>
+        </h1>
         <nav class="navigation modern">
             <a href="#" title="Home">Home</a>
             <a href="#" title="Projects">Projects</a>
@@ -20,13 +20,13 @@
             <a href="#" title="Contact Us">Contact Us</a>
         </nav>
     </header>
-    <main contenteditable>
+    <main>
         <p>Main Content</p>
     </main>
-    <div class="right-sidebar" contenteditable>
+    <div class="right-sidebar">
         <p>Aside Content</p>
     </div>
-    <footer contenteditable>
+    <footer>
         <p>Footer Content</p>
     </footer>
 </body>
