--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>
-            Header Content
+            Rafael Castro WDD 131
         </h1>
         <nav class="navigation modern">
             <a href="#" title="Home">Home</a>
@@ -24,10 +24,11 @@
         <p>Main Content</p>
     </main>
     <div class="right-sidebar">
-        <p>Aside Content</p>
+        <p>Rafael Castro</p>
+        <div><img id="rafael-castro-img" src="images/rafael_castro.jpg" alt="Rafael Castro Photo"> </div>
     </div>
     <footer>
-        <p>Footer Content</p>
+        <p>Rafael Castro</p>
     </footer>
 </body>
 
