W01 Assignment: Home Page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Rafael Castro</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Rafael Pereira de Souza Castro
+    Keyword summary of page content: web front-end development course of BYU Idaho" />
+    <meta name="author" content="Rafael Castro" />
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
-    <h1>Rafael Castro</h1>
+    <header>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Rafael Castro</h1>
+        <nav>
+            <a href="https://www.linkedin.com/in/rafaelpscastro/" title="LinkedIn">LinkedIn</a>
+            <a href="https://byui.instructure.com/" title="I-Learn">I-Learn</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/2?lang=eng&id=p41#p41"
+                title="Scripture ">Scripture </a>
+            <a href="#" title="Final Project">Final Project</a>
+        </nav>
+    </header>
+    <main>
+        <section class="card" id="aboutMe">
+            <h2>About me</h2>
+            <div id="aboutMeFrame">
+
+                <div><img id="rafael-castro-img" src="images/rafael_castro.jpg" alt="Rafael Castro Photo"> </div>
+                <div id="aboutMe-txt">
+                    <p>I am Rafael Castro from Sao Paulo, SP, Brazil, but currently I am living in Brasilia-DF. I am
+                        married
+                        and
+                        I have two sons. The oldest is 9 years old and the youngest is 4.</p>
+                    <p>I have a Bachelor's Degree in Information Systems from University of São Paulo, Brazil and a
+                        post
+                        degree
+                        in Data Analytics Big Data.</p>
+                    <p>I work in Banco do Brasil, one of the largest banks in Brazil, recently I started a new
+                        position
+                        in
+                        IT
+                        department.</p>
+                    <p>I had the privilege to serve as a missionary in Brazil Belem Mission from March 2002 to March
+                        2004,
+                        it
+                        was a great learning experience.</p>
+                    <p>I love to play video games and retro gaming and watch movies and sometimes I play soccer with
+                        friends.
+                    </p>
+                </div>
+
+
+                <div><img id="brazil-flag" src="images/br.png" alt="Brazil's Flag"> </div>
+                <div id="brazil-txt">
+                    <h3>Brazil</h3>
+                    <p>Brazil is the largest and easternmost country in South America and in Latin America. It is
+                        the
+                        world's
+                        fifth-largest country by area and the seventh most populous.</p>
+                    <p>The country is one of the most multicultural and ethnically diverse nations, due to over a
+                        century of
+                        mass
+                        immigration from around the world. It is considered to have the greatest biodiversity of any
+                        country
+                        on the planet, containing over
+                        70%
+                        of all animal and plant species catalogued.</p>
+                </div>
+            </div>
+        </section>
+        <section class="card" id="resources">
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                <li><a href="https://github.com/">GitHub</a></li>
+                <li><a href="https://validator.w3.org/">HTML Validator</a></li>
+                <li><a href="https://jigsaw.w3.org/css-validator/">CSS Validator</a></li>
+            </ul>
+
+        </section>
+    </main>
+    <footer>
+        <p><span id="currentyear"></span> - Rafael Pereira de Souza Castro - Brazil</p>
+        <p id="lastModified"></p>
+    </footer>
+
 </body>
 
 </html>
