--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -21,9 +21,9 @@
     <main>
         <section>
             <h2>Mosiah 3:19</h2>
-            <p>For the anatural bman is an cenemy to God, and has been from the dfall of Adam, and will be, forever and
-                ever, unless he eyields to the enticings of the fHoly Spirit, and gputteth off the hnatural man and
-                becometh a isaint through the atonement of Christ the Lord, and becometh as a jchild, ksubmissive, meek,
+            <p>For the natural man is an enemy to God, and has been from the fall of Adam, and will be, forever and
+                ever, unless he yields to the enticings of the Holy Spirit, and putteth off the natural man and
+                becometh a saint through the atonement of Christ the Lord, and becometh as a child, submissive, meek,
                 humble, patient, full of love, willing to submit to all things which the Lord seeth fit to inflict upon
                 him, even as a child doth submit to his father.</p>
         </section>
