--- a/place.html
+++ b/place.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 131 - São Paulo City - SP, Brazil - Rafael Castro</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Rafael Pereira de Souza Castro
+    Keyword summary of page content: web front-end development course of BYU Idaho" />
     <meta name="author" content="Rafael Castro" />
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
@@ -42,7 +44,6 @@
                     <p>Brazilian Portuguese</p>
                     <p>Brazilian Real</p>
                     <p>UTC-3</p>
-                    </p>
                     <p>+55 11</p>
                 </div>
             </div>
@@ -50,7 +51,7 @@
             <div class="weather">
                 <h2 id="weather-title">Weather</h2>
                 <picture>
-                    <img src="images/sunny.svg" alt="Weather icon" width="100px">
+                    <img src="images/sunny.svg" alt="Weather icon" width="100">
                 </picture>
                 <div class="label">
                     <p>Temperature:</p>
