--- a/place.html
+++ b/place.html
@@ -8,6 +8,8 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Rafael Pereira de Souza Castro
     Keyword summary of page content: web front-end development course of BYU Idaho"/>
     <meta name="author" content="Rafael Castro"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
     <script src="scripts/place.js" defer></script>
