--- a/review.html
+++ b/review.html
@@ -20,7 +20,7 @@
         <h1>Review</h1>
     </header>
     <main>
-        <h3 id="reviews"></h3>
+        <h3 id="reviews">Filled with JS</h3>
 
     </main>
     <footer>
