--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Form - Rafael Castro</title>
+    <title>WDD 131 - Product Review - Rafael Castro</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Rafael Pereira de Souza Castro
     Keyword summary of page content: web front-end development course of BYU Idaho" />
     <meta name="author" content="Rafael Castro" />
@@ -23,6 +23,7 @@
         <form method="get" action="review.html" class="wf1">
             <label>Product Name*
                 <select id="select" name="product" required>
+                    <option disabled selected value=''>Choose a product...</option>
 
 
                     <!-- <option value="software">Software Development</option> -->
@@ -30,34 +31,34 @@
                 </select>
             </label>
 
-            <label>Overall Rating*
+            <div>Overall Rating*
                 <label><input id="oneStar" type="radio" name="rating" value="1" required> &star;</label>
                 <label><input id="twoStar" type="radio" name="rating" value="2"> &star; &star;</label>
                 <label><input id="threeStar" type="radio" name="rating" value="3"> &star; &star; &star;</label>
                 <label><input id="fourStar" type="radio" name="rating" value="4"> &star; &star; &star; &star;</label>
                 <label><input id="fiveStar" type="radio" name="rating" value="5"> &star; &star; &star; &star;
                     &star;</label>
-            </label>
+            </div>
 
 
             <label>Date of Installation*
                 <input id="installationDate" type="date" name="installationDate" required>
             </label>
 
-            <label>Which features did you find useful in the product? <span id="italic">(Check all that
+            <div>Which features did you find useful in the product? <span class="italic">(Check all that
                     apply)</span>
                 <label><input type="checkbox" name="durability" value="yes"> Durability</label>
                 <label><input type="checkbox" name="easeOfUse" value="yes"> Ease of Use</label>
                 <label><input type="checkbox" name="performance" value="yes"> Performance</label>
                 <label><input type="checkbox" name="design" value="yes"> Design</label>
-            </label>
+            </div>
 
-            <label>Written Review <span id="optional">(Optional)</span>
+            <label>Written Review <span class="optional">(Optional)</span>
                 <textarea id="review" name="review">
             </textarea>
             </label>
 
-            <label>Your Name <span id="optional">(Optional)</span>
+            <label>Your Name <span class="optional">(Optional)</span>
                 <input id="name" type="text" name="name" autocomplete="additional-name">
             </label>
 
